--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,5 +7,5 @@ copyedit: false
 last_tested: "2021-06-02"
 steps:
   - title: Introduction
-  - title: Step title
+  - title: Create the creatures
   - title: What next?
