--- a/en/meta.yml
+++ b/en/meta.yml
@@ -11,3 +11,7 @@ steps:
   - title: Add your clones
   - title: Feed your clones
   - title: Add a predator
+  - title: Reflection
+  - title: Upgrade your project
+  - title: Share
+  - title: "What next?"
