--- a/en/meta.yml
+++ b/en/meta.yml
@@ -12,6 +12,11 @@ steps:
   - title: Feed your clones
   - title: Add a predator
   - title: Reflection
+      knowledge_quiz:
+      path: quiz1
+      version: 1
+      questions: 3
+      passing_score: 3
   - title: Upgrade your project
   - title: Share
   - title: "What next?"
