--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
-title: swarms-schools-flocks
+title: Swarms, schools, and flocks
 hero_image: images/banner.png
-description: swarms-schools-flocks description
+description: Create a game that uses clones to make swarms, schools, flocks, or another group of animals.
 version: 4
 listed: false
 copyedit: false
