--- a/en/meta.yml
+++ b/en/meta.yml
@@ -9,6 +9,7 @@ steps:
   - title: Introduction
   - title: Create your scrolling scene
   - title: Add your clones
+    completion: engaged  
   - title: Feed your clones
   - title: Add a predator
   - title: Reflection
@@ -17,6 +18,8 @@ steps:
       version: 1
       questions: 3
       passing_score: 3
+    completion: internal       
   - title: Upgrade your project
+    completion: external  
   - title: Share
   - title: "What next?"
