--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,8 +2,8 @@ title: Swarms, schools, and flocks
 hero_image: images/banner.png
 description: Create a game that uses clones to make swarms, schools, flocks, or another group of animals.
 version: 4
-listed: false
-copyedit: false
+listed: true
+copyedit: true
 last_tested: "2021-06-02"
 steps:
   - title: Introduction
