--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,25 +1,30 @@
+---
 title: Swarms, schools, and flocks
 hero_image: images/banner.png
-description: Create a game that uses clones to make swarms, schools, flocks, or another group of animals.
+description: Create a game that uses clones to make swarms, schools, flocks, or another
+  group of animals.
 version: 4
 listed: true
 copyedit: true
-last_tested: "2021-06-02"
+last_tested: '2021-06-02'
 steps:
-  - title: Introduction
-  - title: Create your scrolling scene
-  - title: Add your clones
-    completion: engaged  
-  - title: Feed your clones
-  - title: Add a predator
-    completion: internal  
-  - title: Reflection
-    completion: external  
-    knowledge_quiz:
-      path: quiz1
-      version: 1
-      questions: 3
-      passing_score: 3
-  - title: Upgrade your project
-  - title: Share
-  - title: "What next?"
+- title: Introduction
+- title: Create your scrolling scene
+- title: Add your clones
+  completion:
+  - engaged
+- title: Feed your clones
+- title: Add a predator
+  completion:
+  - internal
+- title: Reflection
+  knowledge_quiz:
+    path: quiz1
+    version: 1
+    questions: 3
+    passing_score: 3
+  completion:
+  - external
+- title: Upgrade your project
+- title: Share
+- title: What next?
