--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -2,8 +2,8 @@
 title: Zwermen, scholen en kuddes
 hero_image: images/banner.png
 description: Maak een spel dat klonen gebruikt om zwermen, scholen, kuddes of een andere groep dieren te maken.
-meta_title: Scratch coding projects for kids and teens | Swarms and flocks
-meta_description: Learn Scratch with the Raspberry Pi Foundation's coding projects for kids and teens. Create a Scratch game that uses clones to make groups of animals.
+meta_title: Scratch-programmeerprojecten voor kinderen en tieners | Zwermen en kuddes
+meta_description: Leer Scratch met de programmeerprojecten van de Raspberry Pi Foundation voor kinderen en tieners. Maak een spelletje met Scratch dat klonen gebruikt om groepen dieren te maken.
 version: 4
 listed: true
 copyedit: true
